log
Wed, Mar 26, 2025  9:15:36 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  6:41:52 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9c54420
Thu, Mar 27, 2025  6:45:09 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9186b18
Thu, Mar 27, 2025  6:47:06 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c4237b7
Thu, Mar 27, 2025  6:47:40 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
00999d0
Thu, Mar 27, 2025  6:48:25 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
1318646
Thu, Mar 27, 2025  6:50:57 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d966cfa
Thu, Mar 27, 2025  6:52:05 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6ec59a9
Thu, Mar 27, 2025  6:54:37 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d7e33b1
Thu, Mar 27, 2025  6:56:57 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
af3e054
Thu, Mar 27, 2025  6:59:19 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a088a0a
Thu, Mar 27, 2025  7:23:35 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
05f3a19
Thu, Mar 27, 2025  7:24:07 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
99d98e0
Thu, Mar 27, 2025  7:24:55 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ec90ef9
Thu, Mar 27, 2025  7:27:30 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3adc848
